export enum TipoTV {

    LED,
    LCD
}